-
Bug
-
Resolution: Done
-
P2: Important
-
5.12
-
None
-
-
7138d6fd6bba2c2e55d02bccf7fd0c6c287eab29
open an existing file with content as below:
- QFile aFile(myFilePath);
- if(!aFile.open(QIODevice::WriteOnly | QIODevice::Truncate))
- { qDebug() << aFile.errorString(); }
- qDebug() << "Pos " << aFile.pos();
- qDebug() << "File Size write " << aFile.size();
- aFile.resize(0); // bug, the size remain the old size.
- qDebug() << "Pos " << aFile.pos();
- qDebug() << "File Size write " << aFile.size();
| For Gerrit Dashboard: QTBUG-77132 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 268354,6 | QWinRTFileEngine: Implement setSize | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |